--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
 <!-- 			<groupId>se.uu.ub.cora</groupId> -->
 <!-- 			<artifactId>gatekeeper</artifactId> -->
 <!-- 			<version>${gatekeeper.version}</version> -->
-<!-- <!-- 			<scope>provided</scope> --> -->
+ <!-- 			<scope>provided</scope> -->
 <!-- 		</dependency> -->
 		<dependency>
 			<groupId>se.uu.ub.cora</groupId>
