More work on DataGroupRoleReferenceCreatorImp

--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 
 	<properties>
 		<logger.version>2.1.0</logger.version>
-		<storage.version>3.6.0</storage.version>
+		<storage.version>3.7-SNAPSHOT</storage.version>
 <!-- 		<gatekeeper.version>3.5-SNAPSHOT</gatekeeper.version> -->
 		<searchstorage.version>3.4.0</searchstorage.version>
 		<basicstorage.version>3.13-SNAPSHOT</basicstorage.version>
