--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
 		<gatekeeper.version>3.5.0</gatekeeper.version>
 		<json.version>2.1.0</json.version>
 		<xmlutils.version>1.0-SNAPSHOT</xmlutils.version>
+		<converter.version>1.3-SNAPSHOT</converter.version>
 	</properties>
 
 	<scm>
@@ -115,6 +116,11 @@
 			<groupId>se.uu.ub.cora</groupId>
 			<artifactId>xmlutils</artifactId>
 			<version>${xmlutils.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>se.uu.ub.cora</groupId>
+			<artifactId>converter</artifactId>
+			<version>${converter.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.testng</groupId>
