--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 	<parent>
 		<groupId>se.uu.ub.cora</groupId>
 		<artifactId>cora-parent</artifactId>
-		<version>1.3.0</version>
+		<version>1.3.1</version>
 	</parent>
 
 	<artifactId>divamixedstorage</artifactId>
@@ -33,18 +33,18 @@
 
 	<properties>
 		<logger.version>2.2.0</logger.version>
-		<coradata.version>4.1-SNAPSHOT</coradata.version>
-		<storage.version>4.0.0</storage.version>
+		<coradata.version>5.0.0</coradata.version>
+		<storage.version>4.1.0</storage.version>
 		<searchstorage.version>3.6.0</searchstorage.version>
-		<basicstorage.version>4.1-SNAPSHOT</basicstorage.version>
+		<basicstorage.version>5.0.0</basicstorage.version>
 		<sqldatabase.version>4.0.0</sqldatabase.version>
 		<httphandler.version>2.2.0</httphandler.version>
 		<apptokenstorage.version>2.2.0</apptokenstorage.version>
 		<gatekeeper.version>3.6.0</gatekeeper.version>
-		<json.version>2.3.0</json.version>
+		<json.version>2.4.0</json.version>
 		<xmlutils.version>1.0.0</xmlutils.version>
 		<xmlconverter.version>1.5.0</xmlconverter.version>
-		<converter.version>1.3.0</converter.version>
+		<converter.version>1.4.0</converter.version>
 	</properties>
 
 	<scm>
