--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 		<apptokenstorage.version>2.3.0</apptokenstorage.version>
 		<gatekeeper.version>3.7.0</gatekeeper.version>
 		<json.version>3.0-SNAPSHOT</json.version>
-		<xmlutils.version>1.1.0</xmlutils.version>
+		<xmlutils.version>1.4-SNAPSHOT</xmlutils.version>
 		<xmlconverter.version>1.6.0</xmlconverter.version>
 		<converter.version>1.5.0</converter.version>
 		<testutils.version>1.1.1</testutils.version>
