--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,8 @@
 		<storage.version>5.0-SNAPSHOT</storage.version>
 		<searchstorage.version>3.7.0</searchstorage.version>
 		<basicstorage.version>5.1.0</basicstorage.version>
-		<sqldatabase.version>5.0-SNAPSHOT</sqldatabase.version>
-		<sqlstorage.version>1.0-SNAPSHOT</sqlstorage.version>
+		<sqldatabase.version>5.1-SNAPSHOT</sqldatabase.version>
+		<sqlstorage.version>1.3-SNAPSHOT</sqlstorage.version>
 		<httphandler.version>2.3.0</httphandler.version>
 		<apptokenstorage.version>2.3.0</apptokenstorage.version>
 		<gatekeeper.version>3.7.0</gatekeeper.version>
@@ -42,7 +42,7 @@
 		<converter.version>1.5.0</converter.version>
 		<testutils.version>1.1.1</testutils.version>
 <!-- just for connection to real db when testing -->
-		<basicdata.version>3.4.0</basicdata.version>
+<!-- 		<basicdata.version>3.4.0</basicdata.version> -->
 	</properties>
 
 	<scm>
@@ -145,11 +145,11 @@
 			<version>${testutils.version}</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>se.uu.ub.cora</groupId>
-			<artifactId>basicdata</artifactId>
-			<version>${basicdata.version}</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>se.uu.ub.cora</groupId> -->
+<!-- 			<artifactId>basicdata</artifactId> -->
+<!-- 			<version>${basicdata.version}</version> -->
+<!-- 		</dependency> -->
 	</dependencies>
 
 </project>
