--- a/pom.xml
+++ b/pom.xml
@@ -28,17 +28,17 @@
 	<properties>
 		<logger.version>2.3.0</logger.version>
 		<coradata.version>5.1.0</coradata.version>
-		<storage.version>5.0-SNAPSHOT</storage.version>
+		<storage.version>5.2.0</storage.version>
 		<searchstorage.version>3.7.0</searchstorage.version>
 		<basicstorage.version>5.1.0</basicstorage.version>
-		<sqldatabase.version>5.1-SNAPSHOT</sqldatabase.version>
-		<sqlstorage.version>1.3-SNAPSHOT</sqlstorage.version>
+		<sqldatabase.version>6.0.0</sqldatabase.version>
+		<sqlstorage.version>1.2.0</sqlstorage.version>
 		<httphandler.version>2.3.0</httphandler.version>
 		<apptokenstorage.version>2.3.0</apptokenstorage.version>
 		<gatekeeper.version>3.7.0</gatekeeper.version>
-		<json.version>3.0-SNAPSHOT</json.version>
-		<xmlutils.version>1.4-SNAPSHOT</xmlutils.version>
-		<xmlconverter.version>1.8-SNAPSHOT</xmlconverter.version>
+		<json.version>3.1.0</json.version>
+		<xmlutils.version>1.3.0</xmlutils.version>
+		<xmlconverter.version>1.7.0</xmlconverter.version>
 		<converter.version>1.5.0</converter.version>
 		<testutils.version>1.1.1</testutils.version>
 
