--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 		<searchstorage.version>3.7.0</searchstorage.version>
 		<basicstorage.version>5.1.0</basicstorage.version>
 		<sqldatabase.version>6.0.0</sqldatabase.version>
-		<sqlstorage.version>1.2.0</sqlstorage.version>
+		<sqlstorage.version>1.3-SNAPSHOT</sqlstorage.version>
 		<httphandler.version>2.3.0</httphandler.version>
 		<apptokenstorage.version>2.3.0</apptokenstorage.version>
 		<gatekeeper.version>3.7.0</gatekeeper.version>
