--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 		<searchstorage.version>3.10.0</searchstorage.version>
 		<basicstorage.version>5.3.0</basicstorage.version>
 		<sqldatabase.version>6.0.0</sqldatabase.version>
-		<sqlstorage.version>1.3-SNAPSHOT</sqlstorage.version>
+		<sqlstorage.version>1.2.0</sqlstorage.version>
 		<httphandler.version>2.4.0</httphandler.version>
 		<apptokenstorage.version>2.4.0</apptokenstorage.version>
 		<gatekeeper.version>3.10.0</gatekeeper.version>
@@ -39,7 +39,7 @@
 		<converter.version>2.0.0</converter.version>
 		<testutils.version>1.2.0</testutils.version>
 		<basicdata.version>3.5.0</basicdata.version>
-		<corafedora.version>1.3-SNAPSHOT</corafedora.version>
+		<corafedora.version>1.3.0</corafedora.version>
 		
 	</properties>
 
