--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 		<converter.version>2.0.0</converter.version>
 		<testutils.version>1.2.0</testutils.version>
 		<basicdata.version>3.5.0</basicdata.version>
-		<corafedora.version>1.3.0</corafedora.version>
+		<corafedora3x.version>1.0-SNAPSHOT</corafedora3x.version>
 		
 	</properties>
 
@@ -134,8 +134,8 @@
 		</dependency>
 		<dependency>
 			<groupId>se.uu.ub.cora</groupId>
-			<artifactId>fedora</artifactId>
-			<version>${corafedora.version}</version>
+			<artifactId>fedora3x</artifactId>
+			<version>${corafedora3x.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.testng</groupId>
