--- a/pom.xml
+++ b/pom.xml
@@ -24,21 +24,21 @@
 
 	<properties>
 		<logger.version>2.4.0</logger.version>
-		<coradata.version>6.0.0</coradata.version>
-		<storage.version>5.2.0</storage.version>
-		<searchstorage.version>3.10.0</searchstorage.version>
-		<basicstorage.version>5.3.0</basicstorage.version>
-		<sqlstorage.version>1.3.0</sqlstorage.version>
-		<httphandler.version>2.4.0</httphandler.version>
+		<coradata.version>6.1.0</coradata.version>
+		<storage.version>6.0.0</storage.version>
+		<searchstorage.version>3.11.0</searchstorage.version>
+		<basicstorage.version>5.4.0</basicstorage.version>
+		<sqlstorage.version>1.4.0</sqlstorage.version>
+		<httphandler.version>2.5.0</httphandler.version>
 		<apptokenstorage.version>2.4.0</apptokenstorage.version>
-		<gatekeeper.version>3.10.0</gatekeeper.version>
-		<json.version>3.1.0</json.version>
-		<xmlutils.version>1.3.0</xmlutils.version>
-		<xmlconverter.version>1.10.0</xmlconverter.version>
-		<converter.version>2.0.0</converter.version>
+		<gatekeeper.version>3.11.0</gatekeeper.version>
+		<json.version>3.2.0</json.version>
+		<xmlutils.version>1.4.0</xmlutils.version>
+		<xmlconverter.version>1.11.0</xmlconverter.version>
+		<converter.version>2.1.0</converter.version>
 		<testutils.version>1.2.0</testutils.version>
-		<basicdata.version>3.5.0</basicdata.version>
-		<corafedora3x.version>4.0-SNAPSHOT</corafedora3x.version> 
+		<basicdata.version>3.6.0</basicdata.version>
+		<corafedora3x.version>4.0.0</corafedora3x.version> 
 		
 	</properties>
 
