--- a/pom.xml
+++ b/pom.xml
@@ -24,20 +24,20 @@
 
 	<properties>
 		<logger.version>2.5.0</logger.version>
-		<coradata.version>6.2.0</coradata.version>
+		<coradata.version>7.0-SNAPSHOT</coradata.version>
 		<storage.version>6.1.0</storage.version>
 		<searchstorage.version>3.12.0</searchstorage.version>
-		<basicstorage.version>5.5.0</basicstorage.version>
-		<sqlstorage.version>1.5.0</sqlstorage.version>
+		<basicstorage.version>6.0-SNAPSHOT</basicstorage.version>
+		<sqlstorage.version>2.0-SNAPSHOT</sqlstorage.version>
 		<httphandler.version>2.6.0</httphandler.version>
 		<apptokenstorage.version>2.5.0</apptokenstorage.version>
 		<gatekeeper.version>3.12.0</gatekeeper.version>
 		<json.version>3.3.0</json.version>
-		<xmlutils.version>1.5.0</xmlutils.version>
-		<xmlconverter.version>1.12.0</xmlconverter.version>
-		<converter.version>2.2.0</converter.version>
-		<testutils.version>1.3.0</testutils.version>
-		<basicdata.version>3.7.0</basicdata.version>
+		<xmlutils.version>1.6-SNAPSHOT</xmlutils.version>
+		<xmlconverter.version>2.0-SNAPSHOT</xmlconverter.version>
+		<converter.version>3.0-SNAPSHOT</converter.version>
+		<testutils.version>1.4-SNAPSHOT</testutils.version>
+		<basicdata.version>4.0-SNAPSHOT</basicdata.version>
 		<corafedora3x.version>4.1.0</corafedora3x.version> 
 		
 	</properties>
